@@ -2,6 +2,8 @@
 	- Remove -P option, packing after each block is now default.
 	- Add -g option to specify a scaling factor and make the
 	default scaling 8 which results in amplitude units of 125nV.
+	- Convert many long's to int's in MARS reading code to enable
+	64-bit compilation.
 	
 2006.201:
 	- Correct message regarding output scaling, output is 100 nV.
